# Bubblewrap

./: .gitignore  .gitmodules  README.md  Readme.md  Readme_nyj.md  bubblewrap.py  datagen.py  dimension_reduction_neuropixels.py  environment-cpu.yml  environment.yml  environment_gpu.yml  mesh.py  proSVD.py  pyproject.toml  run_2d_mesh.py  simple_attractor.py
.github/workflows/: python-package-conda.yml  python.yaml
core/: mesh.py  utils.py
datagen/: Lorenz attractor data generation.ipynb  Vanderpol data generation.ipynb  datagen.py  diffeq.py  models.py  plots.py  run.py
field/: bubblewrap.py  gqds.py  mesh.py  mesh_jax.py  rbfn_spring.py
figcode/: neuropixel_end-to-end_fig.py  ssSVDfig.py
mesh/: mesh.py
models/: VJF.ipynb  VJF_update.ipynb  VJF_update.py  ZP2016.ipynb  ZP2016.py  cumulative log prob computation.ipynb  diffeq.py  kernels.py  log prob computation - sampled version (ZP 2016).ipynb  log prob computation - sampled version - VJF (ZP 2020).ipynb  log prob computation - sampled version-clean memming2016.ipynb  log prob computation - sampled version.ipynb  logprob.py  plots.py  rbf.py  rbfn.py  run.py  spring.py  spring_vanderpol.py  visualize.py
scripts/: dimension_reduction_neuropixels.py  plot_2d_3d.py  run_2d_mesh.py  run_batch_bubble.py  run_bubblewrap.py  run_bubblewrap_2d_vdp.py  run_bubblewrap_3d_lorenz.py  run_bubblewrap_mouse.py  run_gaussians.py  run_gqds.py  run_gqds_3d.py  run_jpca.py  run_neuropixels.py  run_rbfn.py  run_rbfn_body_pose.py  run_rbfn_obs_gravity.py  run_rbfn_spring.py  run_widefield.py  visualize.py
(+3 files in other folders)
